refactor: Service 레이어 반환 데이터 및 로직 수정
- 각 도메인의 DTO 추가
- 레이어 전체에서 DTO 반환 -> Controller에서 하는 역할을 Service로 가져옴
- DataTransfer의 역할을 담당하도록 했음
- WalletService에서 VoucherRepository와 CustomerRepository에 대한 의존성 제거 -> 테스트 하기 어려워짐 -> 하지만, DB조회를 두번하지 않아도 됨